# open-terrain

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: Terrain Generation using Heighmap.md
resources/shaders/: base_lightning.fs  base_lightning.vs  write_depth.fs
src/: OpenTerrain.cpp  OpenTerrain.hpp  main.cpp
src/blocks/: Block.cpp  Block.hpp  Dirt.cpp  Dirt.hpp  Grass.cpp  Grass.hpp  Sand.cpp  Sand.hpp  Sandstone.cpp  Sandstone.hpp  Stone.cpp  Stone.hpp  Water.cpp  Water.hpp
src/engine/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureDepthTex.cpp  TextureDepthTex.hpp
src/engine/2d/: InputBox.hpp  Rectangle.hpp
src/engine/3d/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Model.cpp  Model.hpp
src/maths/: Vector.hpp
src/render/: ResourceManager.cpp  ResourceManager.hpp
src/world/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
src/world/biomes/: Biome.cpp  Biome.hpp  Desert.cpp  Desert.hpp  Layer.cpp  Layer.hpp  Mountain.cpp  Mountain.hpp  Plain.cpp  Plain.hpp
